# nccl_cudastf

./: CMakeLists.txt  README.md  example1.cu
cmake/Modules/: FindNCCL.cmake
